# better-control-cpp

./: .clangd  Makefile  README.md  control.desktop  meson.build
inc/: arg_parse.hpp  logger.hpp  tools.hpp  utils.hpp  window.hpp
inc/volume/: tab.hpp
include/: arg_parse.hpp  gtk_utils.hpp  logger.hpp  utils.hpp  volume.hpp  window.hpp
src/: arg_parse.cpp  gtk_utils.cpp  logger.cpp  main.cpp  tools.cpp  utils.cpp  window.cpp
src/volume/: control.cpp  tab.cpp
